Revert "static: fix a bug that hide the background image on iOS safari"
This reverts commit bd36711c48b99bee6a74013d3dc8fc833f176e90

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,7 @@ HEADER
 
 .header {
   background: url('../img/bg-banner04.jpg') no-repeat fixed;
+  background-size: cover;
   min-height: 650px;
   position: relative;
 }
